@@ -1,3 +1,6 @@
+20070807
+	libinterp/keyring.c don't include owner= if owner is nil or ""
+	add auth/rsagen
 20070806
 	/module/lists.m add PATH(!), also simplify concat implementation
 20070725
